tests/ui/concurrent_cached_ttl_integer_migration.stderr
error: `ttl` now takes a Duration expression (e.g. `ttl = "Duration::from_secs(60)"`); for whole seconds use `ttl_secs = 60`, for milliseconds use `ttl_millis = 500`.
 --> tests/ui/concurrent_cached_ttl_integer_migration.rs:3:27
  |
3 | #[concurrent_cached(ttl = 60)]
  |                           ^^
